
<resources>
    <string name="app_name">Project 6</string>
    <string name="book_listing">Book Listing</string>
    <string name="search_hint">Termo de Busca</string>
    <string name="list_size_hint">Número de Livros da Lista</string>
    <string name="search">Procurar</string>
    <string name="no_search_term_toast">Por favor, insira um termo de busca</string>
    <string name="no_book_related_to_the_search">Deculpe, mas sua busca não retornou nenhum livro!</string>
    <string name="no_internet_connection">Sem conexão à internet.</string>
    <string name="book_cover_content_description">Book Cover Image from URL</string>
    <string name="info_icon">Info Icon</string>

</resources>